--- a/resources/package.json
+++ b/resources/package.json
@@ -24,6 +24,7 @@
     "electron": "^8.2.1",
     "electron-packager": "^14.2.1",
     "electron-store": "^5.1.1",
+    "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "node-static": "^0.7.11",
