--- a/app/package.json
+++ b/app/package.json
@@ -1,33 +1,62 @@
 {
-  "name": "casterlabs_caffeinated",
-  "version": "0.3.0",
-  "description": "Caffeine TV overlay",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "repository": "https://github.com/thehelvijs/Caffeinated",
-  "keywords": [
-    "Electron",
-    "CaffeineTV",
-    "Caffeine",
-    "OBS overlay",
-    "CaffeineTV Overlay",
-    "Casterlabs",
-    "Casterlabs Caffeinated",
-    "Caffeinated"
-  ],
-  "author": "Casterlabs",
+  "name": "Caffeinated",
+  "version": "0.4.0",
   "license": "MIT",
+  "author": "HelvijsAdams <support@casterlabs.co>",
+  "main": "main.js",
+  "repository": "https://github.com/thehelvijs/Caffeinated",
+  "scripts": {
+    "postinstall": "install-app-deps",
+    "start": "npm install && electron .",
+    "pack": "electon-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "casterlabs.caffeinated",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "icon": "media/app_icon.ico",
+      "target": [
+        {
+          "target": "NSIS",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    }
+  },
   "dependencies": {
     "cors": "^2.8.5",
-    "electron": "^8.2.1",
-    "electron-packager": "^14.2.1",
     "electron-store": "^5.1.1",
     "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "node-static": "^0.7.11",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "electron": "^8.2.1",
+    "electron-builder": "latest"
   }
 }
