--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Caffeinated",
-  "version": "0.4.0",
+  "version": "0.5.0-pre1",
   "license": "MIT",
   "author": "HelvijsAdams <support@casterlabs.co>",
   "main": "main.js",
