--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   },
   "build": {
     "appId": "casterlabs.caffeinated",
+    "artifactName": "Caffeinated-${version}-${os}-setup.${ext}",
     "dmg": {
       "contents": [
         {
