Edited the package.json to call for a icon on the MacOS compile. Also edited the README.md to tell how to compile to get the icon file working on MacOS. Can only compile MacOS version on MacOS.

--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "dist": "electron-builder"
   },
   "build": {
+    "icon": "media/app_icon.icns",
     "appId": "casterlabs.caffeinated",
     "dmg": {
       "contents": [
