--- a/app/package.json
+++ b/app/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "electron-context-menu": "^2.3.0",
     "electron-store": "^5.1.1",
     "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
