--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,11 @@
   "build": {
     "icon": "media/app_icon.icns",
     "appId": "casterlabs.caffeinated",
-    "artifactName": "Caffeinated-${version}-${os}-setup.${ext}",
     "win": {
       "icon": "media/app_icon.ico",
       "target": [
         {
-          "target": "NSIS",
+          "target": "dir",
           "arch": [
             "x64"
           ]
@@ -29,12 +28,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "electron-context-menu": "^2.3.0",
     "electron-store": "^5.1.1",
     "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
-    "jquery": "^3.5.1",
-    "node-static": "^0.7.11",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
