--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caffeinated",
+  "name": "Caffeinated",
   "version": "1.0.0-beta",
   "license": "MIT",
   "author": "HelvijsAdams <support@casterlabs.co>",
@@ -28,13 +28,14 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "electron-store": "^5.1.1",
+    "electron-store": "^6.0.1",
     "electron-window-state": "^5.0.3",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "font-list": "^1.2.11"
   },
   "devDependencies": {
     "electron": "^8.2.1",
-    "electron-builder": "latest"
+    "electron-builder": "^v11.2.1"
   }
 }
