--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
     "font-list": "^1.2.11"
   },
   "devDependencies": {
-    "electron": "^8.2.1",
-    "electron-builder": "^v11.2.1"
+    "electron-builder": "v22.9.1",
+    "electron": "^v11.2.1"
   }
 }
